Fix deployment issues: Add root health endpoint for Render and update backend configuration

--- a/crm-backend/render.yaml
+++ b/crm-backend/render.yaml
@@ -5,6 +5,7 @@ services:
     buildCommand: npm install
     startCommand: npm start
     plan: free
+    healthCheckPath: /
     envVars:
       - key: NODE_ENV
         value: production
