--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.0.3",
     "next": "^14.2.5",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
@@ -31,6 +33,7 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5"
   }
